# miniswig

./: .gitignore  CMakeLists.txt  flake.nix  miniswig.nix
include/squirrel/: squirrel_error.hpp
src/: create_docu.cpp  create_docu.hpp  create_wrapper.cpp  create_wrapper.hpp  globals.hpp  lexer.ll  main.cpp  parser.yy  tree.cpp  tree.hpp  xmlwriter.cpp  xmlwriter.hpp
tests/: environment.nut  example.cpp  example.hpp  example.nut  script_test.cpp  util.hpp
